garen rewrote :spaghetti:

--- a/ReGaren/ReGaren/ReGaren.csproj
+++ b/ReGaren/ReGaren/ReGaren.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>ReGaren</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -23,7 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -59,22 +60,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigList\Combo.cs" />
-    <Compile Include="Config.cs" />
-    <Compile Include="ConfigList\Drawing.cs" />
-    <Compile Include="ConfigList\Farm.cs" />
-    <Compile Include="ConfigList\Harass.cs" />
-    <Compile Include="ConfigList\Misc.cs" />
+    <Compile Include="Config\Combo.cs" />
+    <Compile Include="MenuLoader.cs" />
+    <Compile Include="Config\Drawing.cs" />
+    <Compile Include="Config\Farm.cs" />
+    <Compile Include="Config\Harass.cs" />
+    <Compile Include="Config\Misc.cs" />
     <Compile Include="Damage.cs" />
+    <Compile Include="Humanizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReCore\ConfigList\CItems.cs" />
-    <Compile Include="ReCore\ConfigList\Cleansers.cs" />
-    <Compile Include="ReCore\ConfigList\DItems.cs" />
-    <Compile Include="ReCore\ConfigList\OItems.cs" />
-    <Compile Include="ReCore\ConfigList\Protector.cs" />
-    <Compile Include="ReCore\ConfigList\Settings.cs" />
-    <Compile Include="ReCore\ConfigList\Summoners.cs" />
+    <Compile Include="ReCore\Config\CItems.cs" />
+    <Compile Include="ReCore\Config\Cleansers.cs" />
+    <Compile Include="ReCore\Config\DItems.cs" />
+    <Compile Include="ReCore\Config\OItems.cs" />
+    <Compile Include="ReCore\Config\Protector.cs" />
+    <Compile Include="ReCore\Config\Settings.cs" />
+    <Compile Include="ReCore\Config\Summoners.cs" />
     <Compile Include="ReCore\Core\DrawingsUpdater.cs" />
     <Compile Include="ReCore\Core\Interfaces\IItem.cs" />
     <Compile Include="ReCore\Core\Interfaces\ISpell.cs" />
@@ -91,22 +93,26 @@
     <Compile Include="ReCore\Core\Spells\Snowball.cs" />
     <Compile Include="ReCore\Core\SummonerUpdater.cs" />
     <Compile Include="ReCore\Databases\DangerousSpells.cs" />
-    <Compile Include="ReCore\Loader.cs" />
     <Compile Include="ReCore\Managers\DangerManager.cs" />
     <Compile Include="ReCore\Managers\EntityManager.cs" />
+    <Compile Include="ReCore\Managers\InfoManager.cs" />
     <Compile Include="ReCore\Managers\ItemManager.cs" />
+    <Compile Include="ReCore\Loader.cs" />
     <Compile Include="ReCore\Managers\SummonerManager.cs" />
     <Compile Include="ReCore\Utility\ItemsList.cs" />
     <Compile Include="ReCore\Utility\MenuHelper.cs" />
     <Compile Include="ReCore\Utility\SummonerList.cs" />
     <Compile Include="SpellManager.cs" />
-    <Compile Include="Utility\Combo.cs" />
-    <Compile Include="Utility\Farm.cs" />
-    <Compile Include="Utility\Flee.cs" />
-    <Compile Include="Utility\Harass.cs" />
-    <Compile Include="Utility\Indicator.cs" />
-    <Compile Include="Utility\LastHit.cs" />
-    <Compile Include="Utility\PermaActive.cs" />
+    <Compile Include="Modes\Combo.cs" />
+    <Compile Include="Modes\LaneClear.cs" />
+    <Compile Include="Modes\Harass.cs" />
+    <Compile Include="Utils\Extensions.cs" />
+    <Compile Include="Utils\Indicator.cs" />
+    <Compile Include="Modes\JungleClear.cs" />
+    <Compile Include="Modes\LastHit.cs" />
+    <Compile Include="Modes\PermaActive.cs" />
+    <Compile Include="Utils\MenuHelper.cs" />
+    <Compile Include="Utils\Other.cs" />
     <Compile Include="VersionChecker.cs" />
   </ItemGroup>
   <ItemGroup>
